duniverse/menhirLib.20200211/test/static/bad/bad-arity.mly
%start<int> a
%token A
%%

a: b(A, A) {}

b(X): X {}
