duniverse/menhirLib.20200211/test/static/bad/bad-arity.exp
File "bad-arity.mly", line 5, characters 3-4:
Error: does the symbol "b" expect 1 or 2 arguments?
